syntax = "proto3";

package grpc.health.v1;
option go_package = "git.17bdc.com/shanbay/protos-go";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

message DownStreamNameReq {
    string name = 1;
}

message DownStreamNameRes {
    string down_stream_name = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc GetDownStreamName(DownStreamNameReq) returns (DownStreamNameRes);
}
